--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="card">
                 <h2>Pikachu</h2>
                 <p>Un Pokémon de tipo eléctrico conocido por su gran velocidad y su icónica habilidad de electrocutar.</p>
-                <img class="image" src="https://icon-library.com/images/pokemon-icon-file/pokemon-icon-file-4.jpg" alt="Pikachu">
+                <img class="image" src="https://th.bing.com/th/id/R.194f159dad75541fa2b6224d73fc83eb?rik=%2bRTMurRJV5rDqQ&riu=http%3a%2f%2fwww.baltana.com%2ffiles%2fwallpapers-14%2fPikachu-Widescreen-Wallpapers-37659.jpg&ehk=PaKJyFccd8xO3KoOEkk47mOMMTrETz1asf0QKVxmv14%3d&risl=&pid=ImgRaw&r=0" alt="Pikachu">
             </div>
             <div class="card">
                 <h2>Charizard</h2>
